syntax = "proto3";

package lnrpc;

// Lightning service definition
service Lightning {
    // lnd.proto has getInfo, but your implementation might use a different method name
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);
    
    // This is the method you're using to listen for invoice events
    rpc SubscribeInvoices (InvoiceSubscription) returns (stream Invoice);
    
    // Add other methods your implementation needs
}

message GetInfoRequest {
}

message GetInfoResponse {
    string version = 1;
    string identity_pubkey = 2;
    string alias = 3;
    uint32 num_pending_channels = 4;
    uint32 num_active_channels = 5;
    uint32 num_inactive_channels = 6;
    uint32 num_peers = 7;
    uint32 block_height = 8;
    string block_hash = 9;
    bool synced_to_chain = 10;
    bool synced_to_graph = 11;
    // Other fields...
}

message InvoiceSubscription {
    string add_index = 1;
    string settle_index = 2;
}

message Invoice {
    string memo = 1;
    bytes r_preimage = 2;
    bytes r_hash = 3;
    string value = 4;
    string value_msat = 5;
    bool settled = 6;
    int64 creation_date = 7;
    int64 settle_date = 8;
    string payment_request = 9;
    string description_hash = 10;
    int64 expiry = 11;
    string fallback_addr = 12;
    int64 cltv_expiry = 13;
    // For settled invoices
    string amt_paid_sat = 14;
    string amt_paid_msat = 15;
    // Other fields...
}

// Add other message definitions your implementation needs